--- a/cra/public/index.html
+++ b/cra/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="Creation Rights - Manage and protect your creative works"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.svg" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Creation Rights Manager</title>
   </head>
