--- a/cra/public/index.html
+++ b/cra/public/index.html
@@ -11,7 +11,7 @@
     />
     <link rel="apple-touch-icon" href="/favicon.ico" />
     <link rel="manifest" href="/manifest.json" />
-    <title>Creation Rights Manager</title>
+    <title>Creation Rights</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
